--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
-<html><head>
+<html>
+<head>
+    <title>
+        alarmism.watch - Tracking alarmist stories and predictions
+    </title>
+
+    <meta property="og:title" content="alarmism.watch: Tracking alarmist stories and predictions" />
+    <meta property="og:url" content="https://alarmism.watch" />
+    <meta property="og:description" content="Everday we are getting bombarded with alarmist predictions about the bleak future. But did you know that most of them failed to materialize? This websites tracks those predictions." />
+    <meta property="og:image" content="/assets/favicon.svg" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@shubhamjainco">
+    <meta name="twitter:title" content="alarmism.watch: Tracking alarmist stories and predictions">
+    <meta name="twitter:description" content="Everday we are getting bombarded with alarmist predictions about the bleak future. But did you know that most of them failed to materialize? This websites tracks those predictions." />
+
+    <meta name="twitter:image" content="https://alarmism.watch/assets/favicon.svg" />
+
     <link rel="stylesheet" type="text/css" href="./assets/tailwind.css">
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&amp;display=swap" rel="stylesheet">
+    <link rel="icon" href="/assets/favicon.svg">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
@@ -30,7 +49,7 @@
 
             <p class="mt-4">
                 I don't intend to make a political statement, however I want to track
-                these claims. 
+                these claims to hold them accountable.
             </p>
         </div>
         <div class="my-10 overflow-auto">
