--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 these claims to hold them accountable.
             </p>
         </div>
-        <div class="my-10 overflow-auto">
+        <div class="my-8 overflow-auto">
+            <span class="mb-4 bg-gray-800 inline-block px-4 py-2 rounded font-medium">
+                Predictions Listed: 42
+            </span>
             <table class="w-full js-sort-table" style="min-width: 700px;">
                 <thead>
                     <tr class="text-md border-b-2 border-gray-800 py-4">
