--- a/root.html
+++ b/root.html
@@ -52,18 +52,18 @@
                 these claims to hold them accountable.
             </p>
         </div>
-        <div class="my-8 overflow-auto">
+        <div class="my-8 toFixed overflow-x-auto">
             <span class="mb-4 bg-gray-800 inline-block px-4 py-2 rounded font-medium">
                 Predictions Listed: {{ items | length }}
             </span>
             <table class="w-full js-sort-table" style="min-width: 700px;">
                 <thead>
-                    <tr class="text-md border-b-2 border-gray-800 py-4">
-                        <th class="py-4 cursor-pointer w-1/3 sm:w-1/2" >Prediction</th>
-                        <th class="py-4 cursor-pointer">Status</th>
-                        <th class="py-4 cursor-pointer">Category</th>
-                        <th class="py-4 cursor-pointer">Made About</th>
-                        <th class="py-4 cursor-pointer">Made In</th>
+                    <tr class="text-md py-4">
+                        <th class="py-4 bg-gray-900 cursor-pointer w-1/3 sm:w-1/2" >Prediction</th>
+                        <th class="py-4 bg-gray-900 cursor-pointer">Status</th>
+                        <th class="py-4 bg-gray-900 cursor-pointer">Category</th>
+                        <th class="py-4 bg-gray-900 cursor-pointer">Made About</th>
+                        <th class="py-4 bg-gray-900 cursor-pointer">Made In</th>
                 </tr></thead>
                 <tbody>
                     {% for item in items %}
