--- a/root.html
+++ b/root.html
@@ -52,7 +52,7 @@
                 these claims to hold them accountable.
             </p>
         </div>
-        <div class="my-8 toFixed overflow-x-auto">
+        <div class="my-8 toFixed overflow-auto sm:overflow-visible">
             <span class="mb-4 bg-gray-800 inline-block px-4 py-2 rounded font-medium">
                 Predictions Listed: {{ items | length }}
             </span>
