--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta name="twitter:image" content="https://alarmism.watch/assets/favicon.svg" />
 
-    <link rel="stylesheet" type="text/css" href="/assets/tailwind.css">
+    <link rel="stylesheet" type="text/css" href="/assets/build.css">
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;400;700&amp;display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/favicon.svg">
 
