--- a/root.html
+++ b/root.html
@@ -31,6 +31,9 @@
         *[aria-label] > span {
             border-bottom: 1px dotted;
         }
+
+        .sm\:overflow-visible{overflow:visible}
+        .sm\:w-1\/2{width:50%}
     </style>
 </head>
 <body class="bg-gray-900 text-white">
