--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="max-w-3xl text-lg font-medium text-gray-300">
             <p>
                 Every day we are warned about the imminent threats concerning climate, technology, economy, or society.
-                "We are in an economic bubble," or "Humanity faces mass-extinction in 20 years."
+                &OpenCurlyDoubleQuote;We are in an economic bubble,&CloseCurlyDoubleQuote; or &OpenCurlyDoubleQuote;Humanity faces mass-extinction in 20 years.&CloseCurlyDoubleQuote;
             </p>
             
             <p class="mt-4">
@@ -1264,7 +1264,7 @@
                         <td class="max-w-sm py-4 text-lg pr-2">
 
                                 <span>
-                                    Coronavirus pandemic could have caused 40 million deaths if left unchecked
+                                    Coronavirus pandemic could cause 40 million deaths if left unchecked
 
                                 </span>
                                 <a href="https://www.imperial.ac.uk/news/196496/coronavirus-pandemic-could-have-caused-40/" class="text-blue-600 text-sm font-bold">
