--- a/root.html
+++ b/root.html
@@ -42,7 +42,7 @@
         <div class="max-w-3xl text-lg font-medium text-gray-300">
             <p>
                 Every day we are warned about the imminent threats concerning climate, technology, economy, or society.
-                "We are in an economic bubble," or "Humanity faces mass-extinction in 20 years."
+                &OpenCurlyDoubleQuote;We are in an economic bubble,&CloseCurlyDoubleQuote; or &OpenCurlyDoubleQuote;Humanity faces mass-extinction in 20 years.&CloseCurlyDoubleQuote;
             </p>
             
             <p class="mt-4">
