--- a/root.html
+++ b/root.html
@@ -92,8 +92,7 @@
                             {% endif %}>
 
                         {% if item.status == 'Failed' or
-                            item.status == 'Very Unlikely' or
-                            item.status == 'Unlikely' %}
+                            item.status == 'Very Unlikely' %}
                             <span class="font-bold text-red-600">{{ item.status }}</span>
                         {% elif item.status == 'Correct' or item.status == 'Likely' %}
                             <span class="font-bold text-green-600">{{ item.status }}</span>
