--- a/root.html
+++ b/root.html
@@ -52,11 +52,8 @@
 
             <p class="mt-4">
                 I don't intend to make a political statement, however I want to track
-                these claims to hold them accountable.
-            </p>
-
-            <p class="mt-4">
-                <strong>Note</strong>: In case of no specific timeframe, I have assumed generous amount of years for the prediction to work out or fail.
+                these claims to hold them accountable. In some cases when no specific timeframe
+                was given, I have given generous amount of years for the prediction to work out or fail.
             </p>
         </div>
         <div class="my-8 toFixed overflow-auto sm:overflow-visible">
