--- a/root.html
+++ b/root.html
@@ -31,9 +31,10 @@
         *[aria-label] > span {
             border-bottom: 1px dotted;
         }
-
+        @media (min-width:640px){
         .sm\:overflow-visible{overflow:visible}
         .sm\:w-1\/2{width:50%}
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
@@ -53,7 +54,7 @@
             <p class="mt-4">
                 I don't intend to make a political statement, however I want to track
                 these claims to hold them accountable. In some cases when no specific timeframe
-                was given, I have given generous amount of years for the prediction to work out or fail.
+                was given, I have assumed generous amount of years for the prediction to work out or fail.
             </p>
         </div>
         <div class="my-8 toFixed overflow-auto sm:overflow-visible">
