--- a/root.html
+++ b/root.html
@@ -49,6 +49,7 @@
             <p>
                 Every day we are warned about the imminent threats concerning climate, technology, economy, or society.
                 &OpenCurlyDoubleQuote;We are in an economic bubble,&CloseCurlyDoubleQuote; or &OpenCurlyDoubleQuote;Humanity faces mass-extinction in 20 years.&CloseCurlyDoubleQuote;
+                On the less alarmist side, we have pessmists warning us why something (e.g, the internet) will never work.
             </p>
             
             <p class="mt-4">
@@ -58,7 +59,7 @@
 
             <p class="mt-4">
                 I don't intend to make a political statement, however I want to track
-                these claims to hold them accountable.
+                these claims to hold them accountable. 
             </p>
         </div>
         <div class="my-8 toFixed overflow-auto sm:overflow-visible">
