--- a/root.html
+++ b/root.html
@@ -126,6 +126,16 @@
         </div>
     </div>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77712845-3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-77712845-3');
+    </script>
+
     <script src="/assets/sorttable.js"></script>
 </body>
 </html>
